--- a/paper_summary/熱画像を用いた行動分析論文メモ.md
+++ b/paper_summary/熱画像を用いた行動分析論文メモ.md
@@ -1,110 +1,118 @@
 
 ---
-論文について (掲載ジャーナルなど)
-Lili Tao, Timothy Volonakis, Bo Tan, Yanguo Jing, Kevin Chetty, and Melvyn Smith
-arXiv 2018-11-13の論文
-  意外と最近
+# 論文について (掲載ジャーナルなど)
+- Lili Tao, Timothy Volonakis, Bo Tan, Yanguo Jing, Kevin Chetty, and Melvyn Smith
+  - arXiv 2018-11-13の論文
+  - 意外と最近
+
 # 概要
-家の中での行動のモニタリングはスマートホームの入力とか健康管理とかに使えて便利
-大きな利点があるけど，プライバシーが心配
-じゃあ，低解像度(8x8 pixels)でモニタリングできたらいいんじゃね？
-7つの行動のモニタリング，87.5%の正解率で検出できた
+- 家の中での行動のモニタリングはスマートホームの入力とか健康管理とかに使えて便利
+- 大きな利点があるけど，プライバシーが心配
+- じゃあ，低解像度(8x8 pixels)でモニタリングできたらいいんじゃね？
+- 7つの行動のモニタリング，87.5%の正解率で検出できた
 
 # 問題設定と解決したこと
-家の中
-赤外線を用いて
-低解像度で
-人物の行動
-を検出
+- 家の中
+- 赤外線を用いて
+- 低解像度で
+- 人物の行動
+- を検出
+
 # 何をどう使ったのか
-使った赤外線センサはPanasonicの[Grid-EYE® Infrared Array Sensor https://www.mouser.jp/new/panasonic/panasonic-grid-eye-infrared-array-sensors/]
-低解像度の熱画像で人間の行動を表現するのに有効な，空間的および時間的離散コサイン変換手法を提案
-  人が写っている画像から背景を引く
-  シーケンスが同じ長さにサンプリング
-  離散コサイン変換ベースで時間的空間的特徴を各シーケンスから抽出
-    1.一連の画像に対して1次元離散コサイン変換をかけ，時間的特徴ベクトルを作成
-      実験では，最初の5個の周波数を使った
-    2.各画像に対して2次元離散コサイン変換をかけ，空間的特徴ベクトルを作成
-      8x8の係数マトリックスがアウトプット
-      画像内の低周波成分が選択される特徴ベクトルを構築
-    3.上記特徴を使ってSVMで推論
+- 使った赤外線センサはPanasonicの[Grid-EYE® Infrared Array Sensor https://www.mouser.jp/new/panasonic/panasonic-grid-eye-infrared-array-sensors/]
+- 低解像度の熱画像で人間の行動を表現するのに有効な，空間的および時間的離散コサイン変換手法を提案
+  - 人が写っている画像から背景を引く
+  - シーケンスが同じ長さにサンプリング
+  - 離散コサイン変換ベースで時間的空間的特徴を各シーケンスから抽出
+    - 1.一連の画像に対して1次元離散コサイン変換をかけ，時間的特徴ベクトルを作成
+    -   実験では，最初の5個の周波数を使った
+    - 2.各画像に対して2次元離散コサイン変換をかけ，空間的特徴ベクトルを作成
+    -   8x8の係数マトリックスがアウトプット
+    -   画像内の低周波成分が選択される特徴ベクトルを構築
+    - 3.上記特徴を使ってSVMで推論
+
 # 主張の有効性の検証方法
-  データセット：Infra-ADL2018
-  7つの行動：
-  fall, sit still, stand still, sit to stand, stand to sit, walking from left to right, and walking from right to left.
-  3つのセンサー，被験者8人，各行動10回
-  データセットの目的
-  通常生活の人間の行動を認識するための低解像度赤外線センサの可用性のテスト
-  プライバシー保護しつつ，ヘルスケアのためにてい低解像度赤外線センサが使えるか試行
-  提案手法が（特に転倒検知で）高い認識精度をとれることを示すためのデータセット
-  ベースラインのアルゴリズムと比較して，7つの行動のうち３つで大幅に良くなった．
-  ベースラインのアルゴリズムの論文としては以下
-    Use of low-resolution infrared pixel array for passive human motion movement and recognition
+  - データセット：Infra-ADL2018
+    - 7つの行動：
+      - fall, sit still, stand still, sit to stand, stand to sit, walking from left to right, and walking from right to left.
+  - 3つのセンサー，被験者8人，各行動10回
+  - データセットの目的
+  - 通常生活の人間の行動を認識するための低解像度赤外線センサの可用性のテスト
+  - プライバシー保護しつつ，ヘルスケアのためにてい低解像度赤外線センサが使えるか試行
+  - 提案手法が（特に転倒検知で）高い認識精度をとれることを示すためのデータセット
+  - ベースラインのアルゴリズムと比較して，7つの行動のうち３つで大幅に良くなった．
+  - ベースラインのアルゴリズムの論文としては以下
+    - Use of low-resolution infrared pixel array for passive human motion movement and recognition
 
 # 批評
- データ数少なくない？
- てか，データセット公開してなくない？
- 読んでる俺らどうしようもなくない？検証しようがなくない？
- 特徴抽出手法の妥当性の議論は？
- オクルージョンどうするの？
- うーん，やってみた感が…
+  -  データ数少なくない？
+  -  てか，データセット公開してなくない？
+  -  読んでる俺らどうしようもなくない？検証しようがなくない？
+  -  特徴抽出手法の妥当性の議論は？
+  -  オクルージョンどうするの？
+  -  うーん，やってみた感が…
 
 # 次に読むべき論文
  (分野について読み始め)
- 3D Convolutional Neural network for Home Monitoring using Low Resolution Thermal-sensor Array
-  同じ著者
-  手法をCNNにしましたって論文かな？
+  - 3D Convolutional Neural network for Home Monitoring using Low Resolution Thermal-sensor Array
+    - 同じ著者
+    - 手法をCNNにしましたって論文かな？
 
 ---
 
 # 論文について (掲載ジャーナルなど)
- Anuj K Shah, Ripul Ghosh, Aparna Akula
- Proc. of SPIE Vol. 10751
+- Anuj K Shah, Ripul Ghosh, Aparna Akula
+- Proc. of SPIE Vol. 10751
+
 # 概要
- 屋内環境での人間の行動認識は，事故や損傷を回避する上で超重要
- 　対象のアプリケーションドメイン
-  　独居高齢者，障害を持つ人の行動の監視
-  　単独で孤立した工場で働く人の監視
- 赤外線センサの動画像の空間的時間的特徴を学習する3D-CNNを構築
- 3D-CNN
-  (2つの畳み込み層＋1つのmax pool層)x2の6層
-  end-to-end？
- 894のテストビデオのうち85%の分類精度
+- 屋内環境での人間の行動認識は，事故や損傷を回避する上で超重要
+  - 対象のアプリケーションドメイン
+    - 独居高齢者，障害を持つ人の行動の監視
+    - 単独で孤立した工場で働く人の監視
+  - 赤外線センサの動画像の空間的時間的特徴を学習する3D-CNNを構築
+  - 3D-CNN
+    - (2つの畳み込み層＋1つのmax pool層)x2の6層
+    - end-to-end？
+  - 894のテストビデオのうち85%の分類精度
+
 # 問題設定と解決したこと
- 身体装着型センサーは嫌われる→画像で→照明の問題とかプライバシーやばくね？→デプス画像やシルエットの検知で
- 	このコンテクストだとKinectがよく使われてるやでー
- でも暗いと無理→なら熱画像ならいけんじゃね？
- フォーカスを当てているのは（独居老人とか障害者の）転倒シーンの検出
- 	屋内と屋外でOK
- 近年画像＋CNNが上手くいってる→熱画像でもやられた
- 行動認識のために空間情報＋時間情報が良さそう
+- 身体装着型センサーは嫌われる→画像で→照明の問題とかプライバシーやばくね？→デプス画像やシルエットの検知で
+  - このコンテクストだとKinectがよく使われてるやでー
+  - でも暗いと無理→なら熱画像ならいけんじゃね？
+- フォーカスを当てているのは（独居老人とか障害者の）転倒シーンの検出
+  - 屋内と屋外でOK
+- 近年画像＋CNNが上手くいってる→熱画像でもやられた
+- 行動認識のために空間情報＋時間情報が良さそう
+
 # 何をどう使ったのか
- IRカメラ：[FLIR E60 thermal infrared  camera https://www.ivytools.com/FLIR-E60-Infrared-Thermal-Imaging-Camera-p/flir-e60.htm]
- 　Spectral range 7.5 to 13 µm
-  320 x 240 pixel resolution, Frame Rate - 60 fps,
-  Athermalized manual focus lens, focal length 18 mm
- 3D-CNNで推測
-  入力→conv-32(ReLU)→conv-32(ReLU)→maxpool(dropout)→conv-64(ReLU)→conv-64(ReLU)→maxpool(dropout)→FC-512(ReLU, dropout)→FC-8→softmax
-  出力層以外でバッチノーマライゼーション
-  バッチサイズは32
-  最適化手法はADAM
-  損失関数はカテゴリカルクロスエントロピー
+- IRカメラ：[FLIR E60 thermal infrared  camera https://www.ivytools.com/FLIR-E60-Infrared-Thermal-Imaging-Camera-p/flir-e60.htm]
+  - Spectral range 7.5 to 13 µm
+  - 320 x 240 pixel resolution, Frame Rate - 60 fps,
+ - Athermalized manual focus lens, focal length 18 mm
+- 3D-CNNで推測
+ - 入力→conv-32(ReLU)→conv-32(ReLU)→maxpool(dropout)→conv-64(ReLU)→conv-64(ReLU)→maxpool(dropout)→FC-512(ReLU, dropout)→FC-8→softmax
+ - 出力層以外でバッチノーマライゼーション
+ - バッチサイズは32
+ - 最適化手法はADAM
+ - 損失関数はカテゴリカルクロスエントロピー
+
 # 主張の有効性の検証方法
- 自作データセットで検証
- データセットの構成
-  8つの行動を対象
-   歩く，立つ，転倒，横たわる，座る，椅子から転倒，転倒から座る姿勢へ，転倒から立ち上がる
-  3つの環境で撮影
-  　学生室，寝室，庭
-  被験者50人以上
-  データ詳細
-  　訓練用2641つのビデオ
-  　テスト用894つのビデオ
-  　 各ビデオ0.5秒
-  　 FLIRは30FPSで撮影したから15フレーム
- テストデータで検証，各行動のクラスの平均F1-Scoreが0.85
+- 自作データセットで検証
+- データセットの構成
+  - 8つの行動を対象
+  - 歩く，立つ，転倒，横たわる，座る，椅子から転倒，転倒から座る姿勢へ，転倒から立ち上がる
+- 3つの環境で撮影
+   - 学生室，寝室，庭
+  - 被験者50人以上
+  - データ詳細
+    - 訓練用2641つのビデオ
+    - テスト用894つのビデオ
+    -  各ビデオ0.5秒
+    -  FLIRは30FPSで撮影したから15フレーム
+- テストデータで検証，各行動のクラスの平均F1-Scoreが0.85
+
 # 批評
- 他の転倒検知手法との比較は？
- ドロップアウトとバッチ正規化抜いたネットワークと比較しただけ？
- テストデータでは上手くいってますよーってだけ？
- うーん，熱画像＋3D-CNNをやってみた！感が…
+- 他の転倒検知手法との比較は？
+- ドロップアウトとバッチ正規化抜いたネットワークと比較しただけ？
+- テストデータでは上手くいってますよーってだけ？
+- うーん，熱画像＋3D-CNNをやってみた！感が…
