--- a/paper_summary/熱画像を用いた行動分析論文メモ.md
+++ b/paper_summary/熱画像を用いた行動分析論文メモ.md
@@ -178,3 +178,102 @@
 -  既存の行動ごとの身体シルエット作って二次元配列走査
   - 身体の特定の部位（手，足，頭）を認識，組み合わせて動作を認識
   - 複数のカメラから3Dの動きをキャプチャして，スケルトン化
+
+---
+
+# Computer Vision-Based Descriptive Analytics of Seniors’ Daily Activities for Long-Term Health Monitoring
+
+## 論文について (掲載ジャーナルなど)
+-  Jun-Ting Hsieh*, Zelun Luo*, Niranjan Balachandar, Serena Yeung, Guido Pusiol, Jay Luxenberg, Grace Li, Li-Jia Li, N. Lance Downing, Arnold Milstein, Li Fei-Fei 
+
+-  Proceedings of Machine Learning Research 85:1–18, 2018
+
+## 概要
+- 高齢者増えてる→介護者が継続的に監視することは困難→高齢者を支援する介護者の能力向上が必要
+
+- 高齢者の日常生活の行動のパターンを自動でセンシングできれば，高齢者の健康に関する手がかりになる
+  - センシングにはウェアラブルセンサーが考えられる（侵入型）→邪魔，高齢者つけてくれない
+  -  非侵入型→コンピュータビジョンベースのアプローチ
+  -  プライバシー保護→デプス＋熱画像
+- 高齢者の日常活動パターンの定性的＆定量的な認識を実現
+
+## 問題設定と解決したこと
+- ウェアラブルセンサーNG→ 固定カメラ，センサーに基づくビジョンベースのアプローチ
+
+- 既存のアプローチは転倒検知にフォーカス→通常の行動の認識も（高齢者のヘルスケアというコンテクストでは）大事だよね
+- 現実の高齢者のデータを使おう
+- RGBカメラはプライバシーを考えるとNG→デプス＋熱画像でやろう
+  - データ構成
+    - デプス＋熱画像
+    - タイムスタンプで両者をマッチング
+  - ７つのアクティビティ（6つの行動＋背景）
+    -  ベッドに座っている，立っている，歩いている，寝ている，介護を受けている，ベッドサイドの便器を使っている，背景
+  - アクティビティの識別用に訓練用7日間，テスト用3日間のデータを収集＋アノテーション
+  - 長期分析用に14日間撮影
+- 連続したマルチモーダルビデオが与えられた場合に、長期間にわたってアクティビティのタイムラインを予測
+  - ビデオを異なるセグメントに分割→それぞれが一つのアクティビティに対応
+
+## 何をどう使ったのか
+-  深度センサ
+
+  -  ASUS Xtion PRO depth sensor
+  -  240x320, 30fps
+-  熱センサ
+  -  FLIR Lepton 3 thermal sensor
+  -  160x120, 8.8fps
+-  短いビデオクリップを学習し，7つのアクティビティをリアルタイムで分類
+-  スライドウィンドウ方式で長期のビデオに7つのアクティビティをタグ付けして，毎日のアクティビティタイムラインを構築
+-  深度センサの情報＋熱センサの情報をResNet-34で分類
+-  すべての入力を224x224にスケーリング&トレーニングセットの平均と標準偏差で正規化
+-  ランダムな水平フリップでデータオーグメンテーション
+-  ImageNetの事前トレーニング済みモデルで初期化
+  -  RGBイメージでトレーニングされててチャンネル数が異なる→RGBチャンネル全体の重みの平均をとる
+-  最適化手法：SGD（40エポック）
+  - バッチサイズ：8
+  - momentum：0.9
+  - 重みの減衰率：[$ 5* 10^{-4} ]
+  - 学習率：0.001
+  - 20エポックと30エポックで学習率を[$ \frac{1}{10}]
+-  ビデオクリップの長さT：10
+-  スムージングウィンドウW：5
+- Late fusion: 深度画像で学習＋熱画像で学習→それぞれの結果の平均をとって統合
+
+## 主張の有効性の検証方法
+- アクティビティの識別の検証
+
+- 7つのアクティビティを識別できるかで検証
+- 各アクティビティのデータセットが偏っている（寝ている状態と背景が多い←当たり前だが）
+  - →各カテゴリの平均精度AP（precision-recall曲線の下の面積）をカテゴリごとに平均したmAPでパフォーマンスを評価
+- 訓練用7日間，テスト用3日間で検証
+- ”歩く”のカテゴリを除いた各カテゴリでmAPが0.9超えてるからいいんじゃね？
+- 長期的なアクティビティのタイムラインのが構築できるか検証
+  - 14日間の各日の睡眠時間のグラフや，各アクティビティが起こったタイムラインのヒートマップを作成できることを確認
+
+## 批評
+ >an automated, non-intrusive, privacy-compliant vision-based system trained on real video data for continuous senior activity detection and long-term health monitoring has not been developed prior to our work.
+ > 
+
+- ↑まぁ，ここまで限定したコンテクストでは既存の研究はないやろな
+
+- オクルージョンは？
+
+- 一人だけが画像に写っていることが前提になっていて，活かしにくそう
+
+  - 独居高齢者の見守りだからべつに「一人だけが写っている」という条件は問題ないのか…
+
+- 式の文字の説明が離れすぎ！！！
+
+- 読ませる気がないだろ
+
+- $$
+  x_i \in \mathbb{R}^{T \times H \times W \times C}
+  $$
+
+  - ↑これでTとHとWが何かわからんとか何を読み取れと言うんや
+
+-  誤分類時の対処は？
+
+  -  ↑アプリケーションの話になるかなー
+
+-  睡眠時間とか一日のタイムラインが出せることはわかったけど，その効果のほどはどう評価したらいいんだろうね
+
