--- a/paper_summary/熱画像を用いた行動分析論文メモ.md
+++ b/paper_summary/熱画像を用いた行動分析論文メモ.md
@@ -25,10 +25,10 @@
   - シーケンスが同じ長さにサンプリング
   - 離散コサイン変換ベースで時間的空間的特徴を各シーケンスから抽出
     - 1.一連の画像に対して1次元離散コサイン変換をかけ，時間的特徴ベクトルを作成
-    -   実験では，最初の5個の周波数を使った
+      - 実験では，最初の5個の周波数を使った
     - 2.各画像に対して2次元離散コサイン変換をかけ，空間的特徴ベクトルを作成
-    -   8x8の係数マトリックスがアウトプット
-    -   画像内の低周波成分が選択される特徴ベクトルを構築
+      - 8x8の係数マトリックスがアウトプット
+      - 画像内の低周波成分が選択される特徴ベクトルを構築
     - 3.上記特徴を使ってSVMで推論
 
 ## 主張の有効性の検証方法
@@ -45,12 +45,12 @@
     - Use of low-resolution infrared pixel array for passive human motion movement and recognition
 
 ## 批評
-  -  データ数少なくない？
-  -  てか，データセット公開してなくない？
-  -  読んでる俺らどうしようもなくない？検証しようがなくない？
-  -  特徴抽出手法の妥当性の議論は？
-  -  オクルージョンどうするの？
-  -  うーん，やってみた感が…
+  - データ数少なくない？
+  - てか，データセット公開してなくない？
+  - 読んでる俺らどうしようもなくない？検証しようがなくない？
+  - 特徴抽出手法の妥当性の議論は？
+  - オクルージョンどうするの？
+  - うーん，やってみた感が…
 
 ## 次に読むべき論文
  (分野について読み始め)
@@ -108,8 +108,8 @@
   - データ詳細
     - 訓練用2641つのビデオ
     - テスト用894つのビデオ
-    -  各ビデオ0.5秒
-    -  FLIRは30FPSで撮影したから15フレーム
+    - 各ビデオ0.5秒
+    - FLIRは30FPSで撮影したから15フレーム
 - テストデータで検証，各行動のクラスの平均F1-Scoreが0.85
 
 ## 批評
@@ -123,59 +123,59 @@
 # Action recognition from low-resolution infrared sensor for indoor use: a comparative study between deep learning and classical approaches
 
 ## 論文について (掲載ジャーナルなど)
- Félix Polla ; Hélène Laurent ; Bruno Emile
- 2019 20th IEEE International Conference on Mobile Data Management (MDM)
+ - Félix Polla ; Hélène Laurent ; Bruno Emile
+ - 2019 20th IEEE International Conference on Mobile Data Management (MDM)
 
 ## 概要
--  低解像度センサーを用いた屋内環境での行動分析
-  -  撮影された人がビデオで特定できないことを保証しながら行動認識を実行できるようにするため
--  既存のカメラによる行動認識では被験者の位置が限定される問題があるよね
--  じゃあ，天井に赤外線センサーとりつければよくね？
--  CoCAPSプロジェクトというのを企業とやってる
-  -  そこでシナリオとしてオフィス環境と7つの行動を対象とすることを決めた
-  -  後の段階でいろんなセンサーの情報をマージして，人間の行動を特徴付ける
-  -  このフレームワークの中で低解像度赤外線センサー作ったんだと
--  提案手法：セグメント化された形状の重心位置の追跡から統計属性に基づく特徴＋分類にはMLP
--  F値83%で認識
+- 低解像度センサーを用いた屋内環境での行動分析
+  - 撮影された人がビデオで特定できないことを保証しながら行動認識を実行できるようにするため
+- 既存のカメラによる行動認識では被験者の位置が限定される問題があるよね
+- じゃあ，天井に赤外線センサーとりつければよくね？
+- CoCAPSプロジェクトというのを企業とやってる
+  - そこでシナリオとしてオフィス環境と7つの行動を対象とすることを決めた
+  - 後の段階でいろんなセンサーの情報をマージして，人間の行動を特徴付ける
+  - このフレームワークの中で低解像度赤外線センサー作ったんだと
+- 提案手法：セグメント化された形状の重心位置の追跡から統計属性に基づく特徴＋分類にはMLP
+- F値83%で認識
 
 ## 問題設定と解決したこと
--  64x64ピクセルの赤外線センサーを天井に設置
--  オフィス環境
--  7つの行動を対象
-  -  アクションなし，落ち着きなく動く，地面に座る，立つ，椅子に座る，ゆっくり歩く(～1m/s)，早く歩く
-  -  落ち着きのないアクションの内訳：電話への応答，オブジェクトの移動，パソコンの操作など
-  -  オフィスでよくやる動き
--  データセットは700サンプル（各アクション100サンプル）
+- 64x64ピクセルの赤外線センサーを天井に設置
+- オフィス環境
+- 7つの行動を対象
+  - アクションなし，落ち着きなく動く，地面に座る，立つ，椅子に座る，ゆっくり歩く(～1m/s)，早く歩く
+  - 落ち着きのないアクションの内訳：電話への応答，オブジェクトの移動，パソコンの操作など
+  - オフィスでよくやる動き
+- データセットは700サンプル（各アクション100サンプル）
 
 ## 何をどう使ったのか
 - ガウシアンフィルタをかけて平滑化＋閾値処理で明るい領域（現在フレームの人領域）と暗い領域（もともと人がいた場所の領域）を見つける
--  特徴量を計算（6つ）
-  -  人の領域（楕円領域）の重心の軌跡（重心の動きのベクトル）
+- 特徴量を計算（6つ）
+  - 人の領域（楕円領域）の重心の軌跡（重心の動きのベクトル）
   - 軌跡ベクトルの統計特性（平均，最小，最大，標準偏差）
-  -  ビデオのアクティビティ＝　sum（セグメント化された人領域の面積 * 各フレームの重心の移動距離）
--  12の属性（明るい領域と暗い領域の２つ＊6つの特徴）をMLPにいれて分類
+  - ビデオのアクティビティ＝　sum（セグメント化された人領域の面積 * 各フレームの重心の移動距離）
+- 12の属性（明るい領域と暗い領域の２つ＊6つの特徴）をMLPにいれて分類
 
 ## 主張の有効性の検証方法
--  ディープラーニングの手法と比較して，実装簡単だし計算リソースが少ない
+- ディープラーニングの手法と比較して，実装簡単だし計算リソースが少ない
   - リアルタイムのアプリケーションにいいだろうと主張
--  古典的手法と2つとディープラーニング手法3つ(3D-CNN, LSTM, 3D-CNN+LSTM)と比較
--  3D-CNNのF値85%で提案手法の方法F値83%だから悪くなくね？と主張
+- 古典的手法と2つとディープラーニング手法3つ(3D-CNN, LSTM, 3D-CNN+LSTM)と比較
+- 3D-CNNのF値85%で提案手法の方法F値83%だから悪くなくね？と主張
 
 ## 批評
--  データ公開してくれー
--  1サンプルの長さは？
--  なんで人がいた領域が暗くなるんだ？センサの特性？
--  明るい領域と暗い領域の特徴を計算しているけど，それただ単に前のフレームの人領域計算すればよくね？
+- データ公開してくれー
+- 1サンプルの長さは？
+- なんで人がいた領域が暗くなるんだ？センサの特性？
+- 明るい領域と暗い領域の特徴を計算しているけど，それただ単に前のフレームの人領域計算すればよくね？
 
 ## 次に読むべき論文
  [Computer Vision-Based Descriptive Analytics of Seniors’ Daily Activities for Long-Term Health Monitoring]
   Zelun Luo et al.
 
 ## 関連研究
--  HOG特徴量+AdaBoostで行動認識
-  -  多数のRGBカメラで撮影だったし，研究室環境にアドホックにルールを作っていったって感じ…あんまり
--  熱画像はノイズが多いからオプティカルフローとか勾配に基づく検出方法だと難しいとのこと
--  既存の行動ごとの身体シルエット作って二次元配列走査
+- HOG特徴量+AdaBoostで行動認識
+  - 多数のRGBカメラで撮影だったし，研究室環境にアドホックにルールを作っていったって感じ…あんまり
+- 熱画像はノイズが多いからオプティカルフローとか勾配に基づく検出方法だと難しいとのこと
+- 既存の行動ごとの身体シルエット作って二次元配列走査
   - 身体の特定の部位（手，足，頭）を認識，組み合わせて動作を認識
   - 複数のカメラから3Dの動きをキャプチャして，スケルトン化
 
@@ -184,13 +184,11 @@
 # Computer Vision-Based Descriptive Analytics of Seniors’ Daily Activities for Long-Term Health Monitoring
 
 ## 論文について (掲載ジャーナルなど)
--  Jun-Ting Hsieh*, Zelun Luo*, Niranjan Balachandar, Serena Yeung, Guido Pusiol, Jay Luxenberg, Grace Li, Li-Jia Li, N. Lance Downing, Arnold Milstein, Li Fei-Fei 
-
+-  Jun-Ting Hsieh*, Zelun Luo*, Niranjan Balachandar, Serena Yeung, Guido Pusiol, Jay Luxenberg, Grace Li, Li-Jia Li, N. Lance Downing, Arnold Milstein, Li Fei-Fei
 -  Proceedings of Machine Learning Research 85:1–18, 2018
 
 ## 概要
 - 高齢者増えてる→介護者が継続的に監視することは困難→高齢者を支援する介護者の能力向上が必要
-
 - 高齢者の日常生活の行動のパターンを自動でセンシングできれば，高齢者の健康に関する手がかりになる
   - センシングにはウェアラブルセンサーが考えられる（侵入型）→邪魔，高齢者つけてくれない
   -  非侵入型→コンピュータビジョンベースのアプローチ
@@ -199,7 +197,6 @@
 
 ## 問題設定と解決したこと
 - ウェアラブルセンサーNG→ 固定カメラ，センサーに基づくビジョンベースのアプローチ
-
 - 既存のアプローチは転倒検知にフォーカス→通常の行動の認識も（高齢者のヘルスケアというコンテクストでは）大事だよね
 - 現実の高齢者のデータを使おう
 - RGBカメラはプライバシーを考えるとNG→デプス＋熱画像でやろう
@@ -215,7 +212,6 @@
 
 ## 何をどう使ったのか
 -  深度センサ
-
   -  ASUS Xtion PRO depth sensor
   -  240x320, 30fps
 -  熱センサ
@@ -240,7 +236,6 @@
 
 ## 主張の有効性の検証方法
 - アクティビティの識別の検証
-
 - 7つのアクティビティを識別できるかで検証
 - 各アクティビティのデータセットが偏っている（寝ている状態と背景が多い←当たり前だが）
   - →各カテゴリの平均精度AP（precision-recall曲線の下の面積）をカテゴリごとに平均したmAPでパフォーマンスを評価
@@ -251,29 +246,92 @@
 
 ## 批評
  >an automated, non-intrusive, privacy-compliant vision-based system trained on real video data for continuous senior activity detection and long-term health monitoring has not been developed prior to our work.
- > 
 
 - ↑まぁ，ここまで限定したコンテクストでは既存の研究はないやろな
-
 - オクルージョンは？
-
 - 一人だけが画像に写っていることが前提になっていて，活かしにくそう
-
   - 独居高齢者の見守りだからべつに「一人だけが写っている」という条件は問題ないのか…
-
 - 式の文字の説明が離れすぎ！！！
-
 - 読ませる気がないだろ
-
 - $$
   x_i \in \mathbb{R}^{T \times H \times W \times C}
   $$
-
   - ↑これでTとHとWが何かわからんとか何を読み取れと言うんや
+- 誤分類時の対処は？
+  - ↑アプリケーションの話になるかなー
+- 睡眠時間とか一日のタイムラインが出せることはわかったけど，その効果のほどはどう評価したらいいんだろうね
 
--  誤分類時の対処は？
+---
+# Action Recognition from Extremely Low-Resolution Thermal Image Sequence
 
-  -  ↑アプリケーションの話になるかなー
+## 論文について (掲載ジャーナルなど)
+- Takayuki Kawashima ; Yasutomo Kawanishi ; Ichiro Ide ; Hiroshi Murase ; Daisuke Deguchi et al.
+- 2017 14th IEEE International Conference on Advanced Video and Signal Based Surveillance (AVSS)
 
--  睡眠時間とか一日のタイムラインが出せることはわかったけど，その効果のほどはどう評価したらいいんだろうね
+## 概要
+- 独居高齢者の数が増加→介護者足らない→高齢者の身体機能の低下を[[自動で]]見つけたらいいね
+- 高齢者の[[日常生活]]の行動センシングできたらいいね
+  - テンポラリーだと体調とかに依るかもしれないしね
+- 低解像度な赤外線センサでやってみるか
+- 赤外線センサいいよね
+  - 安価
+  - 照明いらないから昼夜を問わない
+  - （低解像度なら個人特定できないから）プライバシー守れる
 
+## 問題設定と解決したこと
+- 天井に赤外線センサつけて，下記行動を認識したいね
+  - 日常行動（歩行，着席，起立）
+  - 異常行動（転倒）
+- 独居世帯を想定，センサの観測範囲内に入るのは[* 一人]だけと仮定
+  - CNNとRNNを組み合わせたネットワークを使って人物行動認識
+  - 前処理で種々の問題の解決を図る
+- 動きの特徴だとオプティカルフローとか考えられるけどノイズまみれだから使えない問題
+  - →ネットワークにフレーム間差分画像を入れる
+- 天井から撮影された画像をそのまま特徴抽出に使うと，人物の動きではなく家具配置や人物の位置を学習し，学習データに含まれていない位置で起こる行動を認識できない問題（可能性）
+  - →ネットワークに人物領域を切り出した画像を入れよう
+
+## 何をどう使ったのか
+- Thermal sensor D6T-1616L by OMRON
+  - フレームレート10fps
+  - 床面から220cmの高さに鉛直下向きに設置
+  - 空調温度19℃に設定
+- 前処理
+  - 撮影した熱画像をGMMによる背景差分→前景を2値化→重心求める→重心から10画素四方の画像を元画像から切り出し→切り出された人体領域とする
+  - 各画像[[系列]]における画素値の最大，最小値で各画像を正規化→フレーム間差分→フレーム間差分とった画像も上記位置で切り出し
+- 人物行動認識
+  - Recallが低くなるのが問題と考え2段階に分けて行動認識を行う
+    - 行動検出
+      - 行動尤度推定
+        - ある時刻で，認識対象の行動が起きているか否かを識別
+        - 「認識対象の行動」クラスと「その他」クラスの2クラス分類問題
+    - 行動検出
+      - 行動尤度を用いて行動検出，検出にはTAG（Temporal Actionness Grouping)を用いる
+      - 複数の閾値を設定して，区間の重なりを許した複数の区間を検出
+    - 行動分類
+      - 検出されたすべての区間に対して行動分類を行う
+        - 歩行，着席，起立，転倒の他「認識対象以外の行動」と「その他」（何も行動が起こっていない）に分類
+- 後処理
+  - 行動分類で出力された行動尤度をもとにNMS(Non-Maximum Suppression)を適用
+  - 重複して検出された区間を最終的な行動認識結果として出力しないようにする
+  - 最も尤度が高いクラスのみを出力
+  - 「認識対象以外の行動」と「その他」の区間は出力しない
+- ネットワーク構造
+  - input(10x10x2)→conv-3x3(stride:1)→ReLU→maxpooling2x2(stride:2)→ReLU→conv-3x3(stride:1)→ReLU→maxpooling2x2(stride:2)→ReLU→conv-3x3(stride:1)→ReLU→FC→ReLU→FC→ReLU→BLSTM→Sigmoid→Softmax→output(classes)
+  - 最適化手法：ADAM
+  - FCに対してDropout 0.2
+  - 損失関数：交差エントロピー
+  - 画像をx，ｙ軸方向に±1ずらしてデータオーグメンテーション
+  - 600エポック
+- 各系列データに対して行動開始フレームと行動終了フレームをアノテーション
+  - 被験者9人
+    - 歩行，着席，起立，転倒を40本ずつ計1440本
+    - 静止(立位，座位，臥位それぞれ40本）120本ずつ計1080本
+
+## 主張の有効性の検証方法
+- 着席，起立，転倒を認識対象の行動として，4分割交差検証で評価
+- 比較手法と比べて提案手法が高いmAPを示した
+
+## 批評
+-  前処理の効果はいかほどなのであるか？
+
+---
